<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FuelAutonomy">

    <TextView
        android:id="@+id/textView"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/fuel_1"
        android:textAlignment="viewStart"
        android:textColor="@color/md_theme_tertiary"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/llFuel1"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/fuel_2"
        android:textAlignment="viewStart"
        android:textColor="@color/md_theme_secondary"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/llFuel1"
        app:layout_constraintTop_toBottomOf="@+id/llFuel1" />

    <TextView
        android:id="@+id/tv_fuel_1"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/fuel_1_autonomy"
        android:textColor="@color/md_theme_primary"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llFuel2" />

    <TextView
        android:id="@+id/tv_fuel_2"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/fuel_2_autonomy"
        android:textColor="@color/md_theme_primary"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tv_fuel_1"
        app:layout_constraintTop_toBottomOf="@+id/tv_fuel_1" />

    <LinearLayout
        android:id="@+id/llFuel1"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="8dp"
        android:background="@color/md_theme_onTertiaryContainer"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"></LinearLayout>

    <LinearLayout
        android:id="@+id/llFuel2"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_marginTop="8dp"
        android:background="@color/md_theme_onSecondaryContainer"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@+id/llFuel1"
        app:layout_constraintTop_toBottomOf="@+id/textView2"></LinearLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:text="@string/page_2_title"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/md_theme_onPrimaryContainer"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>